# ocl

./: .gitignore  CLAUDE.md  Doxyfile  LICENSE  MailMap  README.md  ReadMe.md  Readme.md  compile_flags.txt  make_dist_linux.sh  make_dist_osx.sh  stdx  stdx.cc
.github/workflows/: cmake-cgi.yml
dev/examples/allocator_system/: CMakeLists.txt  allocator_system.cc
dev/examples/cgi/: CMakeLists.txt  cgi.cc
dev/examples/equiv/: equiv.cc
dev/examples/fix/: CMakeLists.txt  fix.cc
dev/examples/opt/: opt.cc
dev/examples/tracked_ptr/: tracked_ptr.cc
dev/lib/core/: allocator_system.hpp  chunk_string.hpp  error_handler.hpp  includes.hpp
dev/lib/except/: error.hpp  hpptest.hpp
dev/lib/fix/: fix.hpp  network.hpp  parser.hpp
dev/lib/io/: print.hpp
dev/lib/logic/: equiv.hpp  math.hpp  opt.hpp
dev/lib/memory/: allocator_system.hpp  tracked_ptr.hpp
dev/lib/net/: modem.hpp  network.hpp  url.hpp
dev/lib/simd/: avx.hpp  basic_simd.hpp  simd.hpp
dev/lib/tests/: gtest.hpp  hpptest.hpp
dev/lib/utility/: cgi.hpp  cgi_writer.hpp  chunk_string.hpp  crc32.hpp  embfs.hpp
dev/tests/chunk_string/: CMakeLists.txt  chunk_test.cc
dev/tests/fix_basic/: CMakeLists.txt  fix_test.cc
dev/tests/network_basic/: CMakeLists.txt  net_test.cc
dev/tests/tracked_ptr_basic/: CMakeLists.txt  tracked_ptr_test.cc
dev/tests/tracked_ptr_leak/: CMakeLists.txt  tracked_ptr_test.cc
example/hash_crc32_example/: CMakeLists.txt  example.cc
example/option_example/: CMakeLists.txt  example.cc
example/simple_allocator_op/: example.cc
example/simple_unique_socket/: example.cc
example/smart_ptr_example/: CMakeLists.txt  example.cc
examples/: CMakeLists.txt  must_pass.cc  str_checksum.cc
examples/allocator_system/: CMakeLists.txt  allocator_system.cc
examples/cgi/: CMakeLists.txt  cgi.cc
examples/equiv/: CMakeLists.txt  Makefile  equiv.cc
examples/fix/: CMakeLists.txt  fix.cc
examples/fix_tag_example/: CMakeLists.txt  example.cc
examples/hash_crc32_example/: example.cc
examples/must_pass/: CMakeLists.txt  must_pass.cc
examples/opt/: CMakeLists.txt  opt.cc
examples/option_example/: example.cc
examples/simple_allocator_op/: CMakeLists.txt  example.cc
examples/simple_unique_socket/: CMakeLists.txt  example.cc
examples/tracked_ptr/: CMakeLists.txt  tracked_ptr.cc
examples/url/: CMakeLists.txt  url.cc
include/ocl/: allocator_op.hpp  basic_hash.hpp  crc_hash.hpp  equiv.hpp  io.hpp  is_same.hpp  option.hpp  print.hpp  smart_ptr.hpp  smart_socket.hpp  tracked_ptr.hpp  unique_ptr.hpp  unique_socket.hpp
include/ocl/core/: allocator_op.hpp  chunk_string.hpp  config.hpp  equiv.hpp  error.hpp  error_handler.hpp  handler.hpp  includes.hpp  is_same.hpp  opt.hpp  option.hpp
include/ocl/crc32/: crc32.hpp
include/ocl/detail/: config.hpp  net_config.hpp
include/ocl/detail/posix/: net_config.hpp
include/ocl/fix/: checksum.hpp  fix.hpp  parser.hpp
include/ocl/hashing/: crc_hash.hpp  hash.hpp
include/ocl/io/: print.hpp
include/ocl/logic/: math.hpp  opt.hpp
include/ocl/memory/: allocator_system.hpp  tracked_ptr.hpp
include/ocl/net/: modem.hpp  unique_socket.hpp  url.hpp
include/ocl/posix/: unique_socket.hpp
include/ocl/simd/: basic_simd.hpp  simd.hpp
include/ocl/tests/: hpptest.hpp
include/ocl/utility/: cgi.hpp  embfs.hpp
lib/: cgi.cc  cgi.hpp  crc32.hpp  embdfs.hpp  equiv.hpp  fix.hpp  opt.cc  opt.hpp  stdx  stdx.cc  stdx.hpp
lib/astdx/: cgi.hpp  crc32.hpp  embdfs.hpp  equiv.hpp  fix.hpp  math.hpp  opt.hpp
lib/detail/: error.hpp
lib/fix/: network.hpp  parser.hpp
lib/io/: print.hpp
lib/logic/: opt.hpp
lib/memory/: tracked_ptr.hpp
lib/stdx/: cgi.hpp  crc32.hpp  embdfs.hpp  opt.hpp
lib/utility/: cgi.hpp  crc32.hpp  embfs.hpp
meta/tex/: embdfs.tex  embfs.tex
test/: Jamfile  Jamfile.v2  allocator_op.test.cpp  option.test.cpp
test/network_basic/: network_basic_test.cc
tests/chunk_string/: CMakeLists.txt  chunk_test.cc
tests/fix_basic/: fix_test.cc
tests/network_basic/: CMakeLists.txt  net_test.cc  network_basic_test.cc
tests/tracked_ptr/: CMakeLists.txt  tracked_ptr_test.cc
tests/tracked_ptr_basic/: CMakeLists.txt  tracked_ptr_test.cc
tests/tracked_ptr_leak/: CMakeLists.txt  tracked_ptr_test.cc
tools/: hpptest.py
