
cmake_minimum_required(VERSION 3.15...3.31)

project(
  OptionExample
  VERSION 1.0
  LANGUAGES CXX)

find_package(Boost REQUIRED COMPONENTS container)

add_executable(OptionExample example.cc)

set_property(TARGET OptionExample PROPERTY CXX_STANDARD 20)
target_include_directories(OptionExample PUBLIC ../../include/)
target_link_libraries(OptionExample PRIVATE Boost::container)
